card alignment fixes

--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -8,9 +8,12 @@
   padding: .75rem 1.2rem;
   display: inline-block;
   cursor: pointer;
+  border: none;
+  border-radius: 3px;
   font-size: variables.$tertiary-text;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, .3);
+  box-shadow: 0 5px 7px rgba(0, 0, 0, .3);
   transition: 0.1s ease;
+  margin-top: 1em;
 
   &--orange {
     background-color: variables.$main-color;
@@ -33,7 +36,7 @@
    background-color: hsl(210, 11%, 20%);
  }
   &:active {
-    transform: translateY(3px);
+    transform: translateY(2px);
   
   }
 
