--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -4,13 +4,30 @@
 .homepage-main-content__skills {
   width: 100%;
   background: variables.$mid-grey;
-  padding: 0 5em;
+  padding: 2em;
   display: flex;
+  flex-direction: column;
   min-height: 70vh;
   align-items: center;
   flex-wrap: wrap;
-  
-  
+  text-align: center;
+  // h3 {
+  //   font-size: variables.$sub-header;
+  //   color: variables.$dark-grey;
+  // }
+
+  //   @include mixins.respond(tablet) {
+  //     flex-direction: row;
+  //     position: relative;
+  //     padding-top: 5em;
+  //     h3 {
+  //       position: absolute;
+  //       transform: translateX(-50%);
+  //       top: 0;
+  //       left: 50%;
+  //       font-size: variables.$main-header;
+  //     }
+  //   }
 
   .card {
     text-align: center;
@@ -18,13 +35,14 @@
     min-height: 20vh;
     padding: 2em;
   
-    margin: 2rem 0rem;
+    margin: 1em 1em;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2), 0px 20px 20px rgba(0, 0, 0, 0.2);
     background: variables.$darker-grey;
     color: variables.$light-grey;
+    border-radius: 5px;
 
     h4 {
-     font-size: variables.$secondary-text;
+     font-size: variables.$body-text;
     }
 
     p {
