--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -59,6 +59,7 @@
 
     p {
       font-size: variables.$body-text;
+      
     }
   }
 
@@ -67,13 +68,14 @@
 
     margin-bottom: 5em;
     i {
-      font-size: 4rem;
-      padding: 0 0.1em;
+      font-size: 3rem;
+      padding: 0 0.15em;
       cursor: pointer;
     }
 
     i:hover {
       color: hsl(210, 11%, 20%);
+      
     }
 
     i:active {
