--- a/styles/components/_mobile-nav.scss
+++ b/styles/components/_mobile-nav.scss
@@ -10,9 +10,9 @@
   padding-right: 2em;
 
   span {
-    padding: 0.2rem 1.3rem;
+    padding: 0.2rem 1.2rem;
     background: variables.$dark-grey;
-    margin: 0.5rem 0rem;
+    margin: 0.4rem 0rem;
     display: block;
     transition: all 0.5s ease;
   }
