--- a/styles/style.css
+++ b/styles/style.css
@@ -190,8 +190,8 @@ body {
   margin-bottom: 5em;
 }
 .hero-banner__icons i {
-  font-size: 4rem;
-  padding: 0 0.1em;
+  font-size: 3rem;
+  padding: 0 0.15em;
   cursor: pointer;
 }
 .hero-banner__icons i:hover {
@@ -211,9 +211,9 @@ body {
     padding-right: 2em;
   }
   .burger span {
-    padding: 0.2rem 1.3rem;
+    padding: 0.2rem 1.2rem;
     background: #212529;
-    margin: 0.5rem 0rem;
+    margin: 0.4rem 0rem;
     display: block;
     transition: all 0.5s ease;
   }
@@ -319,24 +319,27 @@ body {
 .homepage-main-content__skills {
   width: 100%;
   background: #868e96;
-  padding: 0 5em;
+  padding: 2em;
   display: flex;
+  flex-direction: column;
   min-height: 70vh;
   align-items: center;
   flex-wrap: wrap;
+  text-align: center;
 }
 .homepage-main-content__skills .card {
   text-align: center;
   flex: 1 0 15rem;
   min-height: 20vh;
   padding: 2em;
-  margin: 2rem 0rem;
+  margin: 1em 1em;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2), 0px 20px 20px rgba(0, 0, 0, 0.2);
   background: #343a40;
   color: #e9ecef;
+  border-radius: 5px;
 }
 .homepage-main-content__skills .card h4 {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
 }
 .homepage-main-content__skills .card p {
   font-size: 1.3rem;
@@ -360,9 +363,12 @@ body {
   padding: 0.75rem 1.2rem;
   display: inline-block;
   cursor: pointer;
+  border: none;
+  border-radius: 3px;
   font-size: 1.3rem;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
   transition: 0.1s ease;
+  margin-top: 1em;
 }
 .btn--orange {
   background-color: #fd7e14;
@@ -383,7 +389,7 @@ body {
   background-color: #2d3339;
 }
 .btn:active {
-  transform: translateY(3px);
+  transform: translateY(2px);
 }
 
 /*# sourceMappingURL=style.css.map */
